src/Aspect/Aspect_DisplayConnection.cxx
@@ -19,7 +19,6 @@
 #if defined(HAVE_XLIB)
   #include <X11/Xlib.h>
   #include <X11/Xutil.h>
-  #include <X11/Xatom.h>
 #endif
 
 IMPLEMENT_STANDARD_RTTIEXT(Aspect_DisplayConnection,Standard_Transient)
