src/Xw/Xw_Window.cxx
@@ -26,7 +26,6 @@
 #if defined(HAVE_XLIB)
   #include <X11/Xlib.h>
   #include <X11/Xutil.h>
-  #include <X11/Xatom.h>
   //#include <X11/XF86keysym.h>
 #endif
 
